# RRDP

./: Cargo.toml  README.md  rrdp.config
certs/: cert.pem  key.pem
src/client/: main.rs
src/client/cryptography/: mod.rs
src/client/gui/: mod.rs
src/screenshot/: mod.rs
src/server/: main.rs
src/server/configs/: functions.rs  mod.rs  structs.rs
src/server/cryptography/: mod.rs
src/server/display/: display.rs  image.rs  mod.rs
src/server/errors/: config_errors.rs  connection_errors.rs  crypto_errors.rs  mod.rs  setup_log.rs
src/server/handlers/: mod.rs
src/server/rd/: handle.rs  mod.rs  serializer.rs
tests/: server_test.rs  test_quinn.rs  test_screenshot.rs
